<resources>
    <string name="app_name">CarBeat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="refresh">Refresh</string>
    <string name="list_image_transition">List Transition</string>
    <string name="movies_title">Movies</string>

    <!-- Nav Drawer Menu -->
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_favorites">Favorites</string>
    <string name="nav_menu_posters">Posters</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_open">Open navigation drawer</string>
    <string name="nav_close">Close navigation drawer</string>

    <!-- Cast Activity -->
    <string name="title_activity_cast">CastActivity</string>

    <!-- Account Screen -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="pin">Pin</string>
    <string name="save">Save</string>

    <!-- Errors -->
    <string name="error_first_name">Please enter a first name</string>
    <string name="error_last_name">Please enter a last name</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="phone_number">Phone Number</string>
</resources>
