<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <import type="android.view.View"/>
        <variable name="loading" type="boolean"/>
        <variable name="account" type="com.example.vn008xw.carbeat.data.vo.Account"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Account Edit / Details -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:text="@{account.firstName}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/second_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/first_layout"
            app:layout_constraintTop_toBottomOf="@+id/first_layout">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:text="@{account.lastName}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/third_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/second_layout"
            app:layout_constraintTop_toBottomOf="@+id/second_layout">

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@{account.Email}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/third_layout"
            app:layout_constraintTop_toBottomOf="@+id/third_layout">

            <com.example.vn008xw.carbeat.view.PhoneView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <!--<com.example.vn008xw.carbeat.view.ModalView-->
            <!--android:layout_width="300dp"-->
            <!--android:layout_height="400dp"-->
            <!--android:background="@android:color/white"-->
            <!--android:elevation="16dp"-->
            <!--app:animate="true"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent">-->



        <!--</com.example.vn008xw.carbeat.view.ModalView>-->

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{loading ? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>
    </android.support.constraint.ConstraintLayout>
</layout>